fix on mobile

--- a/jg/coop/css/content/_jobs.scss
+++ b/jg/coop/css/content/_jobs.scss
@@ -58,7 +58,6 @@
 .jobs-info-item {
   width: 100%;
   padding-right: $spacer;
-  text-wrap: nowrap;
 
   @include media-breakpoint-up(sm) {
     width: auto;
